--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/oswald": "^5.2.8",
     "@fontsource/pacifico": "^5.2.7",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.4",
     "framer-motion": "^12.23.24",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.1.4"
